float_eq/tests/derive_tests/float_eq_attribute/float_eq_no_params_list.stderr
error: float_eq attribute must be a list of options, for example `#[float_eq(ulps_epsilon = "MyComplex32Ulps")]`
 --> $DIR/float_eq_no_params_list.rs:4:3
  |
4 | #[float_eq]
  |   ^^^^^^^^
