float_eq/tests/derive_tests/float_eq_attribute/float_eq_no_params_list.rs
use float_eq::FloatEqUlpsEpsilon;

#[derive(Debug, PartialEq, FloatEqUlpsEpsilon)]
#[float_eq]
struct MyComplex32 {
    re: f32,
    im: f32,
}

fn main() {}
